# converter_PhotoFilmStrip_to_Shotcut

./: Cargo.toml  README.md  cache13.txt  temp13.txt
automation_tasks_rs/: Cargo.toml
automation_tasks_rs/src/: main.rs
examples/: example_1.rs
photofilmstrip_format/: Example_3_images.pfs
shotcut_format/: Example_3_images.mlt
src/: hello_mod.rs  lib.rs
tests/: integration_test.rs
